--- a/client/src/CSS/Login.css
+++ b/client/src/CSS/Login.css
@@ -1,3 +1,12 @@
 .form-container {
-	float: center;
+	margin-top: 5%;
+	margin-left: 40%;
+}
+
+.form-row {
+	padding: 7px;
+}
+
+.submit-button {
+	margin-left: 11%;
 }
