--- a/client/src/CSS/Card.css
+++ b/client/src/CSS/Card.css
@@ -31,7 +31,7 @@
 	padding-bottom: 5px;
 	margin-bottom: 10px;
 	background-color: white;
-	border-color: black;
+	border-color: #40434E;
 	border-style: solid;
 	border-width: 1px;
 	border-bottom-left-radius: 8px;
