--- a/client/src/CSS/Card.css
+++ b/client/src/CSS/Card.css
@@ -1,3 +1,5 @@
+@import "Base.css";
+
 .card-main {
 	display: inline-block;
 	width: 100%;
@@ -6,8 +8,8 @@
 	padding-top: 5px;
 	margin-top: 10px;
 	padding-bottom: 5px;
-	background-color: gray;
-	border-color: black;
+	background-color: var(--light-gray);
+	border-color: var(--medium-gray);
 	border-style: solid;
 	border-width: 1px;
 	border-radius: 8px;
