--- a/client/src/CSS/Header.css
+++ b/client/src/CSS/Header.css
@@ -1,3 +1,5 @@
+@import "Base.css";
+
 .Header {
 	text-align: center;
 }
@@ -7,14 +9,17 @@
 }
 
 nav.navbar.navbar-default {
-	background-color: #222629;
-	border-color: #222629;
+	/*background-color: red;*/
+	background-color: var(--dark-gray);
+	border-color: var(--dark-gray);
+	color: white;
 }
 
 .navbar-header {
-	color: #6B6E70;
-	padding: 25px;
-	font-size: 1.5em;
+	color: var(--light-purple);
+	padding: 10px;
+	font-size: 3em;
+	font-weight: bold;
 }
 
 .Header-title {
@@ -32,6 +37,10 @@ nav.navbar.navbar-default {
 .nav-body {
 	float: right;
 	padding: 15px;
+}
+
+a !important {
+	color: white;
 }
 
 body {
