--- a/client/src/CSS/Login.css
+++ b/client/src/CSS/Login.css
@@ -1,6 +1,11 @@
 .form-container {
-	margin-top: 5%;
-	margin-left: 40%;
+	/*margin-top: 5%;
+	margin-left: 40%;*/
+	position: fixed;
+	top: 50%;
+	left: 50%;
+	margin-top: -100px;
+	margin-left: -150px;
 }
 
 .form-row {
@@ -8,5 +13,6 @@
 }
 
 .submit-button {
-	margin-left: 11%;
+	/*margin-left: 11%;*/
+	left: 50%;
 }
