Update text centering to convention

--- a/client/src/CSS/Card.css
+++ b/client/src/CSS/Card.css
@@ -57,3 +57,11 @@
 	padding-right: 5px;
 	margin-right: 10px;
 }
+
+.Challenges-intro {
+	text-align: center;
+}
+
+.Scoreboard-intro {
+	text-align: center;
+}
