--- a/client/src/CSS/Login.css
+++ b/client/src/CSS/Login.css
@@ -1,6 +1,4 @@
 .form-container {
-	/*margin-top: 5%;
-	margin-left: 40%;*/
 	position: fixed;
 	top: 50%;
 	left: 50%;
@@ -10,9 +8,10 @@
 
 .form-row {
 	padding: 7px;
+	float: right;
 }
 
 .submit-button {
-	/*margin-left: 11%;*/
-	left: 50%;
+	margin-left: 40%;
+	float: left;
 }
