--- a/client/src/CSS/Card.css
+++ b/client/src/CSS/Card.css
@@ -2,7 +2,7 @@
 
 .card-main {
 	display: inline-block;
-	width: 100%;
+	width: 95%;
 	padding-left: 5px;
 	padding-right: 5px;
 	padding-top: 5px;
@@ -56,6 +56,11 @@
 	margin-left: 10px;
 	padding-right: 5px;
 	margin-right: 10px;
+	display: flex;
+}
+
+.list-column {
+	width: 50%;
 }
 
 .Challenges-intro {
