Change the size formatting to match input field on flag submit class

--- a/client/src/CSS/Login.css
+++ b/client/src/CSS/Login.css
@@ -10,10 +10,13 @@ fieldset {
 }
 
 label {
-    width: 100px;
-    clear: left;
+	clear: left;
     text-align: right;
     padding-right: 10px;
+}
+
+.login-label {
+    width: 100px;
 }
 
 input, label {
