--- a/client/src/CSS/Card.css
+++ b/client/src/CSS/Card.css
@@ -1,5 +1,9 @@
 @import "Base.css";
 
+html {
+	font-size: 20px;
+}
+
 .card-main {
 	display: inline-block;
 	width: 95%;
@@ -73,4 +77,9 @@
 
 .Scoreboard-intro {
 	text-align: center;
+}
+
+.flag-check-btn {
+	padding: 2px;
+	margin-left: 10px;
 }
