--- a/client/src/CSS/Login.css
+++ b/client/src/CSS/Login.css
@@ -1,6 +1,6 @@
 .login-form {
 	position: fixed;
-	width: 360px;
+	width: 425px;
 	top: calc(50% - 50px);
 	left: calc(50% - 250px);
 }
@@ -12,7 +12,7 @@ fieldset {
 label {
 	clear: left;
     text-align: right;
-    padding-right: 10px;
+    margin-right: 10px;
 }
 
 .login-label {
